# TMS_auto_fill

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  initial_setup.ps1  input_data.csv  pyproject.toml
data/: week48.csv
example/: Timesheet Management System.html
example/Timesheet Management System_files/: 1.3be9a480fe78006a62e4.js.download  main.05ea68a5f3d39ec17fcc.js.download  runtime.ac037d5c4a2abae9f055.js.download  styles.b44ef9121b2778d07e15.css
tests/: __init__.py  test_cli.py  test_csv_generator.py  test_csv_loader.py  test_csv_schema.py  test_dom_mapping.py  test_network_utils.py  test_week_utils.py
timesheet_bot/: __init__.py  __main__.py  cli.py  config.py  csv_generator.py  csv_loader.py  csv_schema.py  gui.py  logging_utils.py  models.py  network_utils.py  playwright_client.py  selectors.py  week_utils.py
